--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <ul class="nav-links" id="navLinks">
             <li><a href="#">Home</a></li>
-            <li><a href="#">Destinations</a></li>
+            <li><a href="destinations1.html">Destinations</a></li>
             <li><a href="#">Packages</a></li>
             <li><a href="#">Gallery</a></li>
             <li><a href="#">Contact</a></li>
