created gallery and contact pages added some finishing touch ALMOST FINISH

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
         <ul class="nav-links" id="navLinks">
             <li><a href="#">Home</a></li>
-            <li><a href="destinations1.html">Destinations</a></li>
-            <li><a href="#">Packages</a></li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="destinations.html">Destinations</a></li>
+            <li><a href="packages.html">Packages</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
 
         <div class="nav-right">
@@ -35,7 +35,7 @@
     </nav>
 
 
-    <section class="reveal">
+    <section>
         <div class="overlay-container">
             <div class="container">
                 <div class="slide">
@@ -46,7 +46,7 @@
                             <div class="description">Renowned for its breathtaking Alpine scenery and precision in
                                 craftsmanship
                             </div>
-                            <button>See More</button>
+                            <a href="#promotions-sec"><button>See More</button></a>
                         </div>
                     </div>
 
@@ -55,7 +55,7 @@
                         <div class="content">
                             <div class="name">Finland</div>
                             <div class="description">Known for its saunas, lakes, and a deep connection to nature</div>
-                            <button>See More</button>
+                            <a href="#promotions-sec"><button>See More</button></a>
                         </div>
                     </div>
 
@@ -66,7 +66,7 @@
                             <div class="description">Famous for its rich culture, historical landmarks, natural beauty,
                                 and
                                 diverse cuisine</div>
-                            <button>See More</button>
+                            <a href="#promotions-sec"><button>See More</button></a>
                         </div>
                     </div>
 
@@ -77,7 +77,7 @@
                             <div class="description">Distinguished by its diverse ecosystems, ranging from beaches to
                                 bushland
                             </div>
-                            <button>See More</button>
+                            <a href="#promotions-sec"><button>See More</button></a>
                         </div>
                     </div>
 
@@ -97,7 +97,7 @@
                             <div class="name">Ireland</div>
                             <div class="description">Known for its lush green landscapes and rich cultural heritage
                             </div>
-                            <button>See More</button>
+                            <a href="#promotions-sec"><button>See More</button></a>
                         </div>
                     </div>
                 </div>
@@ -168,7 +168,7 @@
     </section>
 
     <!-- ===== Promotional Offers Section ===== -->
-    <section class="promotions reveal">
+    <section class="promotions reveal" id="promotions-sec">
         <h2 class="section-title">Promotional Offers</h2>
         <p class="promo-text">🔥 Limited Time Deals! Book Now & Save Big! 🔥</p>
         <div class="promo-cards">
@@ -179,7 +179,7 @@
                     <h3>Paris Getaway</h3>
                     <p>Experience the romantic city of lights. Iconic landmarks, gourmet cuisine, and a breathtaking
                         Seine cruise await you.</p>
-                    <button>Book Now</button>
+                    <a href="packages.html"><button>Book Now</button></a>
                 </div>
             </div>
 
@@ -190,7 +190,7 @@
                     <h3>Bali Adventure</h3>
                     <p>Discover Bali’s lush forests and serene beaches. Perfect for adventure lovers and relaxation
                         seekers alike.</p>
-                    <button>Book Now</button>
+                    <a href="packages.html"><button>Book Now</button></a>
                 </div>
             </div>
 
@@ -201,7 +201,7 @@
                     <h3>Tokyo Explorer</h3>
                     <p>Immerse yourself in Tokyo’s vibrant culture. Temples, tech, and cuisine all in one exciting
                         adventure.</p>
-                    <button>Book Now</button>
+                    <a href="packages.html"><button>Book Now</button></a>
                 </div>
             </div>
 
@@ -212,7 +212,7 @@
                     <h3>New York Rush</h3>
                     <p>From Times Square to Central Park, experience the city that never sleeps with exclusive discounts
                         for a limited time.</p>
-                    <button>Book Now</button>
+                    <a href="packages.html"><button>Book Now</button></a>
                 </div>
             </div>
 
@@ -223,7 +223,7 @@
                     <h3>Dubai Luxury</h3>
                     <p>Luxury stays, desert safaris, and breathtaking skyscrapers.Hurry up quicky Grab this special
                         offer before it ends!</p>
-                    <button>Book Now</button>
+                    <a href="packages.html"><button>Book Now</button></a>
                 </div>
             </div>
 
@@ -234,7 +234,7 @@
                     <h3>Rome Classic</h3>
                     <p>Step into history with Rome’s ancient architecture, world-class cuisine, and unforgettable
                         experiences at discounted rates.</p>
-                    <button>Book Now</button>
+                    <a href="packages.html"><button>Book Now</button></a>
                 </div>
             </div>
         </div>
@@ -267,8 +267,8 @@
                             connection with elegance itself.
                         </p>
                         <div class="card-actions">
-                            <button class="btn-primary">Discover Now</button>
-                            <a class="link-ghost" href="#">View experiences →</a>
+                            <a href="destinations.html"><button class="btn-primary">Discover Now</button></a>
+                            <a class="link-ghost" href="gallery.html">View experiences →</a>
                         </div>
                     </div>
                 </article>
@@ -289,8 +289,8 @@
                             Every moment feels sacred, every breeze a quiet invitation to simply be.
                         </p>
                         <div class="card-actions">
-                            <button class="btn-primary">Discover Now</button>
-                            <a class="link-ghost" href="#">View experiences →</a>
+                            <a href="destinations.html"><button class="btn-primary">Discover Now</button></a>
+                            <a class="link-ghost" href="gallery.html">View experiences →</a>
                         </div>
                     </div>
                 </article>
@@ -311,8 +311,8 @@
                             pulse of tomorrow.
                         </p>
                         <div class="card-actions">
-                            <button class="btn-primary">Discover Now</button>
-                            <a class="link-ghost" href="#">View experiences →</a>
+                            <a href="destinations.html"><button class="btn-primary">Discover Now</button></a>
+                            <a class="link-ghost" href="gallery.html">View experiences →</a>
                         </div>
                     </div>
                 </article>
@@ -333,8 +333,8 @@
                             passion and poetry.
                         </p>
                         <div class="card-actions">
-                            <button class="btn-primary">Discover Now</button>
-                            <a class="link-ghost" href="#">View experiences →</a>
+                            <a href="destinations.html"><button class="btn-primary">Discover Now</button></a>
+                            <a class="link-ghost" href="gallery.html">View experiences →</a>
                         </div>
                     </div>
                 </article>
@@ -356,8 +356,8 @@
                             waiting to be rediscovered.
                         </p>
                         <div class="card-actions">
-                            <button class="btn-primary">Discover Now</button>
-                            <a class="link-ghost" href="#">View experiences →</a>
+                            <a href="destinations.html"><button class="btn-primary">Discover Now</button></a>
+                            <a class="link-ghost" href="gallery.html">View experiences →</a>
                         </div>
                     </div>
                 </article>
@@ -378,15 +378,15 @@
                             The city’s pulse is electric a living invitation to chase dreams that don’t wait.
                         </p>
                         <div class="card-actions">
-                            <button class="btn-primary">Discover Now</button>
-                            <a class="link-ghost" href="#">View experiences →</a>
+                            <a href="destinations.html"><button class="btn-primary">Discover Now</button></a>
+                            <a class="link-ghost" href="gallery.html">View experiences →</a>
                         </div>
                     </div>
                 </article>
             </div>
 
             <div class="more-btn">
-                <button class="btn-ghost-large">Explore All Destinations</button>
+                <a href="destinations.html"><button class="btn-ghost-large">Explore All Destinations</button></a>
             </div>
         </div>
     </section>
@@ -403,7 +403,7 @@
                 <h3>Flight Booking</h3>
                 <p>Book your flights easily with flexible dates and enjoy seamless planning for every journey you take
                     with Travel-Smart.</p>
-                <button>Book Now</button>
+                <a href="contact.html"><button>Book Now</button></a>
             </div>
 
             <!-- Card 2 -->
@@ -412,7 +412,7 @@
                 <h3>Hotel Reservation</h3>
                 <p>Find and reserve hotels worldwide with best deals. Read reviews and get personalized recommendations
                     for every stay you need.</p>
-                <button>Book Now</button>
+                <a href="contact.html"><button>Book Now</button></a>
             </div>
 
             <!-- Card 3 -->
@@ -421,7 +421,7 @@
                 <h3>Custom Itineraries</h3>
                 <p>Create travel plans tailored to your interests. Sightseeing, adventures, and relaxing activities
                     designed just for your trips.</p>
-                <button>Plan Now</button>
+                <a href="contact.html"><button>Plan Now</button></a>
             </div>
 
             <!-- Card 4 -->
@@ -430,7 +430,7 @@
                 <h3>Car Rentals</h3>
                 <p>Book reliable vehicles for your trip with ease. Flexible pickup and drop-off options make travel
                     convenient anywhere you go.</p>
-                <button>Rent Now</button>
+                <a href="contact.html"><button>Rent Now</button></a>
             </div>
 
             <!-- Card 5 -->
@@ -439,7 +439,7 @@
                 <h3>Excursions & Tours</h3>
                 <p>Explore guided tours and activities at destinations. Choose cultural, adventure, or relaxing
                     experiences for your travel plans.</p>
-                <button>Explore Now</button>
+                <a href="contact.html"><button>Explore Now</button></a>
             </div>
 
             <!-- Card 6 -->
@@ -448,7 +448,7 @@
                 <h3>24/7 Support</h3>
                 <p>Get help whenever you need it. Travel experts assist you anytime to ensure your trip is smooth, safe,
                     and worry-free always.</p>
-                <button>Contact Now</button>
+                <a href="contact.html"><button>Contact Now</button></a>
             </div>
         </div>
     </section>
@@ -470,9 +470,10 @@
                 <h3>Quick Links</h3>
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Destinations</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Offers</a></li>
+                    <li><a href="destinations.html">Destinations</a></li>
+                    <li><a href="packages.html">Packages</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
 
@@ -498,9 +499,9 @@
         <div class="footer-bottom">
             <p>&copy; 2025 Travel-Smart. All rights reserved.</p>
             <div class="social-icons">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.twitter.com/"><i class="fab fa-twitter"></i></a>
             </div>
         </div>
     </footer>
