--- a/packages.html
+++ b/packages.html
@@ -58,7 +58,7 @@
             justify-content: space-between;
             padding: 16px 70px;
             backdrop-filter: blur(5px);
-            /* background: rgba(130, 2, 99, 0.95); */
+            background: rgba(130, 2, 99, 0.95);
             border-bottom: 1px solid rgba(255, 255, 255, 0.15);
             transition: all 0.4s ease;
             z-index: 100;
